# fastapi_obuch

./: main.py  pyproject.toml  requirements.txt
